--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/rpp2207-sdc-Adrastea/Product-Overview#readme",
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "mysql2": "^3.0.1",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
