--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.4",
+    "mongosh": "^1.6.2",
     "mysql2": "^3.0.1",
     "nodemon": "^2.0.20"
   },
