--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/rpp2207-sdc-Adrastea/Product-Overview#readme",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
